2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* swank-presentations.lisp (inspect-presentation): Throw an error when
	trying to access unrecorded object.
	(lookup-presented-object-or-lose): Rename from `get-repl-result'.

2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-call-defun): When on defclass insert
	 (make-instance 'name).

2010-03-08  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (all-slots-for-inspector): Sort class
	names when grouping by inheritance the same way as slots are sorted.

2010-03-08  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-call-defun): Work also on defvar/defparameter.

2010-03-07  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (stable-sort-by-inheritance): Remove
	copy-seq, unnecessarily put in the previous commit.

2010-03-07  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp: Add buttons
	for selecting default sorting order and default grouping method of
	slots of a class.

	(all-slots-for-inspector): Implement the above feature.
	Move the default method from :method option of the GF to a separate
	defmethod, this method is quite large and :method eats space for
	indentation.
	(*inspector-slots-default-order*):
	New variable, accepts :unsorted and :alphabetically
	(*inspector-slots-default-grouping*): New variable,
	accepts :all and :inheritance.

2010-03-07  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (extract-local-op-arglists): Fix for
	`(labels ((foo (x) ...)|'.

	* slime-autodoc.el (autodoc.1): Add test cases.

2010-02-20  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-fancy.el: Call init function for fancy
	inspector. Necessary due to 2010-02-15.


2010-02-19  Stas Boukarev  <stassats@gmail.com>

	* slime-fuzzy.el (slime-fuzzy-choices-buffer): Make connection
	buffer-local, otherwise `swank:fuzzy-completion-selected' will
	be sent to the default connection.
